ACS-6920 Fix PMD issues + refactor [ags]